<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.og.boggle.GameActivity"
    tools:showIn="@layout/activity_game">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gameLayout">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:id="@+id/boardLayout">

        <GridLayout
            android:id="@+id/boardGridLayout"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:rowCount="4"
            android:columnCount="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/box0"
                android:tag="0"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp" />

            <TextView
                android:id="@+id/box1"
                android:tag="1"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="fill_vertical|center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box2"
                android:tag="2"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box3"
                android:tag="3"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="0"
                android:layout_column="3"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box4"
                android:tag="4"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box5"
                android:tag="5"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box6"
                android:tag="6"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box7"
                android:tag="7"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="1"
                android:layout_column="3"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box8"
                android:tag="8"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box9"
                android:tag="9"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box10"
                android:tag="10"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box11"
                android:tag="11"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="2"
                android:layout_column="3"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box12"
                android:tag="12"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="3"
                android:layout_column="0"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box13"
                android:tag="13"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box14"
                android:tag="14"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="3"
                android:layout_column="2"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/box15"
                android:tag="15"
                android:layout_width="@dimen/boxSize"
                android:layout_height="@dimen/boxSize"
                android:layout_row="3"
                android:layout_column="3"
                android:onClick="chooseLetter"
                android:textSize="@dimen/boxTextSize"
                android:textColor="#3630f2"
                android:gravity="center"
                android:layout_margin="2dp"/>

        </GridLayout>

        <Button
            android:text="@string/moreOptionsButton"
            android:id="@+id/optionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/buttonPadding"
            android:layout_alignLeft="@+id/boardGridLayout"
            android:layout_alignRight="@+id/boardGridLayout"
            android:layout_alignStart="@+id/boardGridLayout"
            android:layout_alignEnd="@+id/boardGridLayout"
            android:layout_marginBottom="@dimen/marginFull"
            android:background="@color/colorLightBlue"
            android:textColor="@color/colorOffWhite"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/buttonTextSize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/boardGridLayout"
            android:layout_alignRight="@+id/boardGridLayout"
            android:layout_alignStart="@+id/boardGridLayout"
            android:layout_alignEnd="@+id/boardGridLayout"
            android:layout_marginTop="@dimen/marginFull"
            android:id="@+id/scoreView"
            android:text="@string/currentScore"
            android:textColor="@color/colorOffWhite"
            android:background="@color/colorDarkGray"
            android:textSize="@dimen/largerTextSize"
            android:paddingTop="@dimen/paddingTextBox"
            android:paddingLeft="@dimen/paddingTextBox"
            android:paddingRight="@dimen/paddingTextBox"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/boardGridLayout"
            android:layout_alignRight="@+id/boardGridLayout"
            android:layout_alignStart="@+id/boardGridLayout"
            android:layout_alignEnd="@+id/boardGridLayout"
            android:layout_below="@id/scoreView"
            android:id="@+id/currentWordView"
            android:text="@string/currentWord"
            android:textColor="@color/colorOffWhite"
            android:background="@color/colorDarkGray"
            android:textSize="@dimen/smallerTextSize"
            android:paddingBottom="@dimen/paddingTextBox"
            android:paddingLeft="@dimen/paddingTextBox"
            android:paddingRight="@dimen/paddingTextBox"
            />

        </RelativeLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#aac4ed"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:id="@+id/gameOverLayout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <TextView
                    android:text="@string/successMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameOverTitle"
                    android:textSize="@dimen/titleSize"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold"
                    android:textAlignment="center" />

                <TextView
                    android:text="@string/foundWordsMessage"
                    android:id="@+id/gameOverSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/gameOverTitle"
                    android:layout_alignRight="@+id/gameOverTitle"
                    android:layout_alignStart="@+id/gameOverTitle"
                    android:layout_alignEnd="@+id/gameOverTitle"
                    android:layout_below="@+id/gameOverTitle"
                    android:textSize="@dimen/subTitleSize"
                    android:textColor="@android:color/black"
                    android:textStyle="normal"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/startNewGameButton"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/buttonPadding"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/gameOverSubTitle"
                    android:layout_marginTop="@dimen/marginFull"
                    android:background="@color/colorLightBlue"
                    android:textColor="@color/colorLightGray"
                    android:text="@string/startNewGame"
                    android:textSize="@dimen/buttonTextSize"/>

                <Button
                    android:id="@+id/backToMainMenuButton"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/buttonPadding"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/startNewGameButton"
                    android:layout_marginTop="@dimen/marginFull"
                    android:background="@color/colorLightBlue"
                    android:textColor="@color/colorLightGray"
                    android:text="@string/backToMainMenu"
                    android:textSize="@dimen/buttonTextSize"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>
